multiple changes for pointing to new staging backend for testing and Security changes for userhash

--- a/confirmInvitations.html
+++ b/confirmInvitations.html
@@ -139,8 +139,8 @@
                     <label for="lastName" class="ui-hidden-accessible">Last Name</label>
                     <input name="lastName" id="LeftPanelLastName" placeholder="Last Name" value="" type="text" disabled="" style="color:blue; font-weight: bold;">
 
-                    <label for="emailAddress" class="ui-hidden-accessible">Email address</label>
-                    <input name="emailAddress" id="LeftPanelEmailAddress" placeholder="Email address" value="" type="text" disabled="" style="color:blue; font-weight: bold;">
+                    <!-- <label for="emailAddress" class="ui-hidden-accessible">Email address</label> -->
+                    <!-- <input name="emailAddress" id="LeftPanelEmailAddress" placeholder="Email address" value="" type="text" disabled="" style="color:blue; font-weight: bold;"> -->
 
                     <!--label for="changePassword" class="ui-hidden-accessible">Change Password</label>
                     <input name="changePassword" id="LeftPanelChangePassword" placeholder="Change Password" value="" type="text"-->
