--- a/register_old.html
+++ b/register_old.html
@@ -92,7 +92,7 @@
                             <div class="ui-block-a"><button id='submitRegistrationButton'><i class='fa fa-chevron-right fa-1x pull-right'></i>CONTINUE</button></div>    
                         </div>
                         </form>
-<!--                    <form name="addUserTagForm" id="addUserTagForm" method="post" action="http://evening-thicket-5124.herokuapp.com/credentialService/addUserTag">  
+<!--                    <form name="addUserTagForm" id="addUserTagForm" method="post" action="http://ancient-falls-9049.herokuapp.com/credentialService/addUserTag">  
                             <input type="hidden" name="userid" id="userid">
                             <input type="hidden" name="tag" id="tag">
                         </form>-->
