--- a/upcomingInvitations.html
+++ b/upcomingInvitations.html
@@ -120,7 +120,7 @@
                     <label for="lastName" class="ui-hidden-accessible">Last Name</label>
                     <input name="lastName" id="lastName" placeholder="Last Name" value="" type="text">
 
-                    <label for="emailAddress" class="ui-hidden-accessible">Email address</label>
+                    <!-- <label for="emailAddress" class="ui-hidden-accessible">Email address</label> -->
                     <input name="emailAddress" id="emailAddress" placeholder="Email address" value="" type="text">
 
                     <label for="changePassword" class="ui-hidden-accessible">Change Password</label>
