--- a/register.html
+++ b/register.html
@@ -92,7 +92,7 @@
                     <label for="homeTown" class="ui-hidden-accessible">Select a city</label>
                     <input name="homeTown" id="homeTown" placeholder="Select a city" value="" type="text"/>
 
-                    <label for="emailAddress" class="ui-hidden-accessible">Email address</label>
+                    <!-- <label for="emailAddress" class="ui-hidden-accessible">Email address</label> -->
                     <input name="email" id="email" placeholder="Enter your email address" value="" type="email"/>
 
                     <label for="password" class="ui-hidden-accessible">Password</label>
