--- a/login.html
+++ b/login.html
@@ -13,6 +13,7 @@
         <script src="js/loggedInOutBehavior.js"></script>
         <script src="js/login.js"></script> 
         
+
         <link rel="stylesheet" type="text/css" href="css/login.css">
         <link rel="stylesheet" media="screen and (min-width:768px)" type="text/css" href="css/loginipad.css">
         <link href="//fonts.googleapis.com/css?family=PT+Sans Narrow:400,700" rel="stylesheet" type="text/css">
@@ -42,6 +43,7 @@
                 <br>
                 <label for="password" class="ui-hidden-accessible">Password</label>
                 <input name="password" id="password" placeholder="Password" value="" type="password">
+                <span id=”login”></span>
 
                 <br><br>
 
@@ -52,6 +54,9 @@
                 <div  style="text-align:center">
                     <a href="#" id="registerButton" class="findpplBtn" style="color:#ffffff; background-color: #cc0000; margin-top:10px;" >REGISTER</a>
                 </div>     
+                <div  style="text-align:center">
+                    <a id="twitterSignOn" class="findpplBtn" style="color:#ffffff; background-color: #55acee; margin-top:10px;" >TWITTER</a>
+                </div>
 
                 <div style="text-align:center; margin-top:10px;"> 
                     <a href="#" id="forgotPwdButton">Forgot your password?</a>
@@ -75,10 +80,10 @@
             <div data-role="panel" data-position="right" data-position-fixed="true" data-display="overlay" data-theme="a" id="add-form">
                 <ul data-role="listview">
                     <li data-icon="delete"><a href="#" data-rel="close" style="background-color: #fff; text-align: center; font-weight:700;" id="beta"><p>BETA</p></a></li>
-                     <li data-icon="logoicon"><a id="home" href="#">Home</a></li>
+                    <li data-icon="logoicon"><a id="home" href="#">Home</a></li>
                     <li class="loggedInFields" data-icon="mytables"><a id="myTable" href="#">My Tables<span id="tableNo" class="ui-li-count" style="color:#cc0000;">0</span></a></li>
                     <li class="loggedInFields" data-icon="bell"><a id="invites" href="">Respond To Invitations<span id="inviteNo" class="ui-li-count" style="color:#cc0000;">0</span></a></li>
-                    
+
                     <li onclick="login()" class="loggedOutFields" data-icon="bell"><a id="login" href="">Login</a></li>
                     <li data-icon="logouticon" onclick="logout()" class="loggedInFields" data-icon="bell"><a id="logout" href="">Logout</a></li>
 
@@ -89,7 +94,7 @@
                 </ul>
             </div><!--  right panel -->
 
-           <!-- <div data-role="footer" data-position="fixed"></div> <!-- Important-->
+            <!-- <div data-role="footer" data-position="fixed"></div> <!-- Important-->
 
         </div>
     </body>
