changes for registration new params for twitter integration and callbackurl and config php change to make this work locally

--- a/register.html
+++ b/register.html
@@ -109,6 +109,10 @@
 
                         <input name="imageMasterLocation" id="imageMasterLocation" value="" type="hidden"/>
                         <input name="imageThumbnailLocation" id="imageThumbnailLocation" value="" type="hidden"/>
+                        <input name="loginType" id="loginType" value="" type="hidden"/>
+                        <input name="platformId" id="platformId" value="" type="hidden"/>
+                        
+
 
 
 
