--- a/register.html
+++ b/register.html
@@ -74,16 +74,16 @@
 
                         <br>  
 
-                        <ul data-role="listview" style="margin-bottom:10px; padding-top: 10px;" data-mini="true">
+<!--                        <ul data-role="listview" style="margin-bottom:10px; padding-top: 10px;" data-mini="true">
 
                             <li data-role="collapsible" data-collapsed-icon="arrow-d" data-expanded-icon="arrow-u" data-iconpos="right" data-inset="false" data-mini="true" style="background-color:#ffffff;" class="topic">
                                 <h2>What do you want to talk about?</h2>
-                                <!--  <form> -->
+                                  <form> 
                                 <fieldset id="topicsList" data-role="controlgroup" data-mini="true"> 
                                 </fieldset>
-                                <!-- </form> -->
+                                 </form> 
                             </li>
-                        </ul>
+                        </ul>-->
 
                         <input name="firstName" id="firstName" placeholder="First Name" value="" type="text"/>
 
