changes for twitter profile image integration and other related fixes for registration

--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
         <div data-role="page" data-theme="a">
 
             <div data-role="header" id="header" data-position="fixed"> 
-                <h3>SIGN IN WITH</h3>
+                <h3>SIGN IN</h3>
 
                 <!-- This is the  to initiate side panels-->
                 <a href="#nav-panel" data-icon="mygear" id="closeleftPanel" class="ios app-theme-none notext" data-iconpos="notext" style="background:#cc0000; margin-right:5px; margin-top:5px;">Menu</a>
@@ -45,22 +45,21 @@
                 <input name="password" id="password" placeholder="Password" value="" type="password">
                 <span id=”login”></span>
 
-                <br><br>
-
                 <div style="text-align:center">
-                    <a href="#" id="continueButton" class="findpplBtn" style="color:#ffffff; background-color: #cc0000; margin-top:10px;" >CONTINUE</a>
+                    <a href="#" id="continueButton" class="findpplBtn" style="color:#ffffff; background-color: #cc0000; margin-top:10px;" >LOG IN</a>
                 </div>
-
+                
+                <br><br>
                 <div  style="text-align:center">
-                    <a href="#" id="registerButton" class="findpplBtn" style="color:#ffffff; background-color: #cc0000; margin-top:10px;" >REGISTER</a>
+                    <a href="#" id="registerButton" class="findpplBtn" style="color:#ffffff; background-color: #cc0000; margin-top:10px;" >SIGN UP WITH EMAIL</a>
                 </div>     
                 <div  style="text-align:center">
-                    <a id="twitterSignOn" class="findpplBtn" style="color:#ffffff; background-color: #55acee; margin-top:10px;" >TWITTER</a>
+                    <a id="twitterSignOn" class="findpplBtn" style="color:#ffffff; background-color: #55acee; margin-top:10px;" >SIGN IN WITH TWITTER</a>
                 </div>
 
-                <div style="text-align:center; margin-top:10px;"> 
+<!--                <div style="text-align:center; margin-top:10px;"> 
                     <a href="#" id="forgotPwdButton">Forgot your password?</a>
-                </div>
+                </div>-->
 
             </div><!-- /content -->
 
