--- a/register.html
+++ b/register.html
@@ -117,7 +117,7 @@
                         <input name="firstName" id="firstName" placeholder="First Name" value="" type="text"/>
 
                         <input name="lastName" id="lastName" placeholder="Last Name" value="" type="text"/>
-                        <input name="DOB" id="DOB" type="text" placeholder="Date of Birth"/>
+                        <input name="dateOfBirth" id="dateOfBirth" type="text" placeholder="Date of Birth"/>
                         <textarea cols="40" rows="8" name="bio" id="bio" placeholder="Bio (Max. 140 characters)"></textarea>
                         By creating an account, you acknowledge that you have read the Privacy Policy and agree to the Terms of Service.
                         <!-- <label for="bio" class="ui-hidden-accessible">Bio</label>
