copy changes on registration and mood pages

--- a/register.html
+++ b/register.html
@@ -100,25 +100,25 @@
                      
                         <!-- <label for="emailAddress" class="ui-hidden-accessible">Email address</label> -->
                         <div id="registerPage1">  
-                        <input name="email" id="email" placeholder="Enter your email address" value="" type="email"/>
+                        <input name="email" id="email" placeholder="Enter email" value="" type="email"/>
 
                         <label for="password" class="ui-hidden-accessible">Password</label>
-                        <input name="password" id="password" placeholder="Select a password" value="" type="password"/>
+                        <input name="password" id="password" placeholder="Create Password (at least 6 characters)" value="" type="password"/>
 
                         <label for="ConfirmPassword" class="ui-hidden-accessible">Verify password</label>
                         <input name="ConfirmPassword" id="ConfirmPassword" placeholder="Verify password" value="" type="password"/>
 
                         <label for="homeTown" class="ui-hidden-accessible">Select a city</label>
-                        <input name="homeTown" id="homeTown" placeholder="Select a city" value="" type="text"/>
+                        <input name="homeTown" id="homeTown" placeholder="What city do you live in?" value="" type="text"/>
                         <button type = "Button" id="nextPageButton">Next Page</button>
                         
                         </div>
                         <div id="registerPage2"> 
-                        <input name="firstName" id="firstName" placeholder="First Name" value="" type="text"/>
+                        <input name="firstName" id="firstName" placeholder="First name (for your profile)" value="" type="text"/>
 
-                        <input name="lastName" id="lastName" placeholder="Last Name" value="" type="text"/>
-                        <input name="dateOfBirth" id="dateOfBirth" type="text" placeholder="Date of Birth"/>
-                        <textarea cols="40" rows="8" name="bio" id="bio" placeholder="Bio (Max. 140 characters)"></textarea>
+                        <input name="lastName" id="lastName" placeholder="Last name (won't be revealed)" value="" type="text"/>
+                        <input name="dateOfBirth" id="dateOfBirth" type="text" placeholder="When's your birthday?"/>
+                        <textarea cols="40" rows="8" name="bio" id="bio" placeholder="Create a quick bio (max 140 characters) that gets to the heart of what you're about. It can be edited later in the Settings."></textarea>
                         By creating an account, you acknowledge that you have read the Privacy Policy and agree to the Terms of Service.
                         <!-- <label for="bio" class="ui-hidden-accessible">Bio</label>
                          <input name="bio" id="bio" placeholder="Bio" value="" type="text"/> -->
