--- a/mood.html
+++ b/mood.html
@@ -65,7 +65,7 @@
                     <li data-role="collapsible" data-collapsed-icon="arrow-d ui-nodisc-icon" data-expanded-icon="arrow-u" data-iconpos="right" data-inset="false" data-mini="true" style="background-color:#ffbb00;" class="panel1">
                         <h2>WHAT'S ON YOUR MIND THESE DAYS?</h2>
                         <h3>CHOOSE UPTO 3 TAGS</h3>
-                        <form>
+                        <form id="topicsForm">
                             <fieldset id="topicsList" data-role="controlgroup" data-mini="true"> 
                                
 
