Mood page validation for 3 topics selection max dynamically while selecting

--- a/mood.html
+++ b/mood.html
@@ -63,7 +63,7 @@
                 <ul data-role="listview" style="margin-bottom:10px; padding-top: 10px;" data-mini="true">
                     
                     <li data-role="collapsible" data-collapsed-icon="arrow-d ui-nodisc-icon" data-expanded-icon="arrow-u" data-iconpos="right" data-inset="false" data-mini="true" style="background-color:#ffbb00;" class="panel1">
-                        <h2>WHAT'S ON YOUR MIND THESE DAYS?</h2>
+                        <h2>WHAT'S ON YOUR MIND?</h2>
                         <h3>CHOOSE UPTO 3 TAGS</h3>
                         <form id="topicsForm">
                             <fieldset id="topicsList" data-role="controlgroup" data-mini="true"> 
