preConversationsLinks page addition post confirmInvitations page

--- a/confirmInvitations.html
+++ b/confirmInvitations.html
@@ -10,10 +10,7 @@
         <link rel="stylesheet" href="css/timepicker.css">
         <link href="//fonts.googleapis.com/css?family=PT+Sans Narrow:400,700" rel="stylesheet" type="text/css">
         <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script> 
-
-
-
-
+        <script src="//code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
         <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=geometry,places&sensor=true"></script>
         <script src="js/jquery.session.js"></script>
         <script src="js/loggedInOutBehavior.js"></script>
@@ -31,6 +28,7 @@
                     $('#basicExample').timepicker('setTime', date);
                     $('#dateString').text(dateString)
                 });
+  
         </script>    
         
         <link href='http://fonts.googleapis.com/css?family=PT+Sans:700,400' rel='stylesheet' type='text/css'>
@@ -114,10 +112,7 @@
                     <a href="#" id = "confirmInvitesButtonId" class="confirminvitesButton" onclick="confirmInvite()" style="color:#ffffff; background-color: #cc0000;">SEND OUT INVITES</a>
                     <a id = "InvitesSentId" class="confirminvitesButton" style="color:#ffffff; background-color: #cc0000; line-height: 40px; font-family: PT Sans;">SENDING INVITES ... </a>
                 </div>
-
-
-
-
+           
 
 
             </div><!-- /content -->
