new UX changes in findyourpeople to send invite right away and related fixes

--- a/mood.html
+++ b/mood.html
@@ -91,9 +91,9 @@
                         <h2 id="whereText" value="">WHERE?</h2>
                         <ul data-role="listview" data-mini="true">
                             <!--<li onclick="changeWhereHeading(5,'Less than 250 ft (1 block)')"><a href="#">Less than 250 ft (1 block)</a></li>-->
-                            <li onclick="changeWhereHeading(10,'I WANT TO STAY IN THE NEIGHBORHOOD < 1/2 MILE')"><a href="#">I WANT TO STAY IN THE NEIGHBORHOOD <I>< 1/2 MILE</I></a></li>
-                            <li onclick="changeWhereHeading(100,'I DON\'T MIND EXPLORING A LITTLE < 5 MILES')"><a href="#">I DON'T MIND EXPLORING A LITTLE <I>< 5 MILES</I></a></li>
-                            <li onclick="changeWhereHeading(300,'I\'M FLEXIBLE, JUST KEEP IT REASONABLE < 15 MILES')"><a href="#">I'M FLEXIBLE, JUST KEEP IT REASONABLE <I>< 15 MILES</I></a></li>
+                            <li onclick="changeWhereHeading(10,'NEIGHBORHOOD < 1/2 MILE')"><a href="#">NEIGHBORHOOD <I>< 1/2 MILE</I></a></li>
+                            <li onclick="changeWhereHeading(100,'EXPLORE A LITTLE < 5 MILES')"><a href="#">EXPLORE A LITTLE<I>< 5 MILES</I></a></li>
+                            <li onclick="changeWhereHeading(300,'FLEXIBLE < 15 MILES')"><a href="#">FLEXIBLE<I>< 15 MILES</I></a></li>
                         </ul>
                     </li>
                     
