--- a/findYourPeople.html
+++ b/findYourPeople.html
@@ -63,9 +63,9 @@
             </div>
 
                 <fieldset class="ui-grid-b" style="border:1px solid #cc0000; background:#ffffff; margin-top:2px;">
-                    <div class="ui-block-a" class="AddButton"><input id="addButton" type="image" src="images/addprofile.svg"/></div>
+                    <div class="ui-block-a" class="AddButton"><input id="addButton" type="image" src="images/confirm.svg"/></div>
                     <div class="ui-block-b" class="MoveOnButton"><input id="moveOnButton" type="image" src="images/moveon.svg"/></div>
-                    <div class="ui-block-c" class="ConfirmButton"><input id="confirmButton" type="image" src="images/confirm.svg"/></div>
+<!--                    <div class="ui-block-c" class="ConfirmButton"><input id="confirmButton" type="image" src="images/confirm.svg"/></div>-->
                 </fieldset>
                         <div data-tap-toggle="false" style="overflow-y:scroll; padding:0px; background-color:#ffffff; opacity:0.7;" class="biodiv"> 
                                                 <div style="background-color:#ffffff; opacity:0.7;"><h3 id="userName">NAME</h3>
