multiple changes for new UX in mood page, find your people

--- a/findYourPeople.html
+++ b/findYourPeople.html
@@ -135,7 +135,7 @@ We’re building something new, and as an early-stage startup, your participatio
                     </div>-->
 
                     <div id="activityDetails" style="background-color:#999999; text-shadow:none;">
-                        <p id="time" class="preferredTime"></p>
+<!--                        <p id="time" class="preferredTime"></p>-->
                         <p id="radius" class="preferredLocation"></p>   
                         <p id="activity" class="preferredActivity"></p>                        
 
