--- a/mood.html
+++ b/mood.html
@@ -75,15 +75,15 @@
 
 
 
-                    <li id="timeMenu" data-role="collapsible" data-collapsed-icon="arrow-d ui-nodisc-icon" data-expanded-icon="arrow-u ui-nodisc-icon" data-iconpos="right" class="time" data-inset="false" data-mini="true" style="background-color:#88ccc1;">
+<!--                    <li id="timeMenu" data-role="collapsible" data-collapsed-icon="arrow-d ui-nodisc-icon" data-expanded-icon="arrow-u ui-nodisc-icon" data-iconpos="right" class="time" data-inset="false" data-mini="true" style="background-color:#88ccc1;">
                         <h2 id="timeText" value="">WHEN?</h2>
                         <ul data-role="listview" data-mini="true">
-                            <!--<li onclick="changeTimeHeading(20,'In 20 minutes')"><a href="#">In 20 minutes</a></li>-->
+                            <li onclick="changeTimeHeading(20,'In 20 minutes')"><a href="#">In 20 minutes</a></li>
                             <li onclick="changeTimeHeading(60,'LET\'S MEET NOW')"><a href="#">LET'S MEET NOW</a></li>
                             <li onclick="changeTimeHeading(120,'I CAN GET TOGETHER IN FEW HOURS')"><a href="#">I CAN GET TOGETHER IN FEW HOURS</a></li>
                             <li onclick="changeTimeHeading(0,'GET IN TOUCH WHENEVER, I\'M FLEXIBLE')"><a href="#">GET IN TOUCH WHENEVER, I'M FLEXIBLE</a></li>
                         </ul>
-                    </li>
+                    </li>-->
 
 
 
