--- a/register.html
+++ b/register.html
@@ -119,7 +119,7 @@
 
                         <input name="lastName" id="lastName" placeholder="Last name (won't be revealed)" value="" type="text"/>
                         <input name="dateOfBirth" id="dateOfBirth" type="text" placeholder="When's your birthday?"/>
-                        <textarea cols="40" rows="8" name="bio" id="bio" placeholder="Create a quick bio (max 140 characters) that gets to the heart of what you're about. It can be edited later in the Settings."></textarea>
+                        <textarea cols="40" rows="8" name="bio" id="bio" placeholder="We believe that you’re more than just a pretty face. Create a quick bio (max 140 characters) that gets to the heart of who you are. It can be edited later in the Settings."></textarea>
                         <br><br>
                         By creating an account, you acknowledge that you have read the Privacy Policy and agree to the Terms of Service.
                         <!-- <label for="bio" class="ui-hidden-accessible">Bio</label>
