multiple changes for new right slide out for invitations

--- a/myUpcomingTables.html
+++ b/myUpcomingTables.html
@@ -14,7 +14,7 @@
         <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=geometry,places&sensor=true"></script>
         <script src="js/jquery.session.js"></script>
         <script src="js/loggedInOutBehavior.js"></script>
-        <script src="js/myTables.js"></script>
+        <script src="js/myUpcomingTables.js"></script>
 
         <script src="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
 
@@ -31,7 +31,7 @@
         <div data-role="page" data-theme="a">
 
             <div data-role="header" id="header" data-position="fixed"> 
-                <h3>MY TABLES</h3>
+                <h3>MY UPCOMING TABLES</h3>
 
                 <!-- This is the  to initiate side panels-->
                 <a href="#nav-panel" data-icon="mygear" id="closeleftPanel" class="ios app-theme-none notext" data-iconpos="notext" style="background:#cc0000; margin-left:5px; margin-top:5px;">Menu</a>
