--- a/profile.html
+++ b/profile.html
@@ -14,6 +14,7 @@
         <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=geometry,places&sensor=true"></script>
         <script src="js/jquery.session.js"></script>
         <script src="js/loggedInOutBehavior.js"></script>
+        <script src="js/profile.js"></script>
         <!--script type="text/javascript">
         window.onload = loggedInLoggedOutBehavior();
         </script-->
@@ -55,15 +56,15 @@
                     <label for="Birthday" class="ui-hidden-accessible">BIRTHDAY</label>
                     <input name="Birthday" id="LeftPanelBirthday" placeholder="Birthday" value="" type="text" disabled="" style="color:blue; font-weight: bold;">
 
-                    <label for="emailAddress" class="ui-hidden-accessible">Email address</label> 
-                    <input name="emailAddress" id="LeftPanelEmailAddress" placeholder="Email address" value="" type="text" disabled="" style="color:blue; font-weight: bold;">
+                    <!--label for="emailAddress" class="ui-hidden-accessible">Email address</label> 
+                    <input name="emailAddress" id="LeftPanelEmailAddress" placeholder="Email address" value="" type="text" disabled="" style="color:blue; font-weight: bold;"-->
 
                     <label for="changePassword" class="ui-hidden-accessible">Change Password</label>
                     <input name="changePassword" id="LeftPanelChangePassword" placeholder="Change Password" value="" type="text">
 
                     <label for="city" class="ui-hidden-accessible">CITY</label> 
                     <input name="city" id="LeftPanelCity" placeholder="CITY" value="" type="text"  style="color:blue; font-weight: bold;">
-                    
+                                       <a href="#" id="registerButton" class="findpplBtn" style="color:#ffffff; background-color: #cc0000; margin-top:10px;" >SIGN UP WITH EMAIL</a>
 
                     <div style="text-align:center";><img src="images/panel-logoicon.png"></div>
 
