commented out line 24 and 98 - "find your people js". moved the profile viewing logic into the profiile.js

--- a/profile.html
+++ b/profile.html
@@ -64,8 +64,9 @@
 
                     <label for="city" class="ui-hidden-accessible">CITY</label> 
                     <input name="city" id="LeftPanelCity" placeholder="CITY" value="" type="text"  style="color:blue; font-weight: bold;">
-                                       <a href="#" id="registerButton" class="findpplBtn" style="color:#ffffff; background-color: #cc0000; margin-top:10px;" >SIGN UP WITH EMAIL</a>
-
+                   <div style="text-align:center";>
+                    <a href="#" id="updateProfileButton" class="findpplBtn" style="color:#ffffff; background-color: #cc0000; margin-top:10px;" >UPDATE MY INFO</a>
+                   </div>
                     <div style="text-align:center";><img src="images/panel-logoicon.png"></div>
 
             <!-- This div is for the left panel-->
