Front end box to accept user messages in confirm screen

--- a/view.html
+++ b/view.html
@@ -101,8 +101,11 @@
                     <a href="#" id = "confirmInvitesButtonId" class="confirminvitesButton" onclick="confirmTable()" style="color:#ffffff; background-color: #cc0000;">CONFIRM TABLE</a>
                     <a id = "InvitesSentId" class="confirminvitesButton" style="color:#ffffff; background-color: #cc0000; line-height: 40px; font-family: PT Sans;">CONFIRMING TABLE ... </a>
                 </div>
-
-
+       <textarea cols="40" rows="8" name="bio" id="sendNoteTextId" placeholder="While we build the chat functionality, please use this space if you wish to inform anything to others like &#34I am running 10 min late&#34 or &#34Sorry, I have an emergency and I will not be able to make it&#34 "></textarea>
+       <div style="text-align:center">
+       <a href="#" id = "sendNoteButtonId" class="confirminvitesButton" onclick="" style=" color:#ffffff; background-color: #cc0000;">Send Note</a>
+       </div>
+                    
             <!-- This div is for the left panel-->
             <div data-role="panel" data-position-fixed="true" data-display="overlay" data-theme="a" id="nav-panel">
                <ul data-role="listview">
