Testing the update profile method

--- a/profile.html
+++ b/profile.html
@@ -64,10 +64,11 @@
 
                     <label for="city" class="ui-hidden-accessible">CITY</label> 
                     <input name="city" id="LeftPanelCity" placeholder="CITY" value="" type="text"  style="color:blue; font-weight: bold;">
-                   <div style="text-align:center";>
-                    <a href="#" id="updateProfileButton" class="findpplBtn" style="color:#ffffff; background-color: #cc0000; margin-top:10px;" >UPDATE MY INFO</a>
+                   <div style="text-align:center">
+                       <a href="#" id="updateProfileButton" class="findpplBtn" onclick="updateUserProfile()"
+                       style="color:#ffffff; background-color: #cc0000; margin-top:10px;" >UPDATE MY INFO</a>
                    </div>
-                    <div style="text-align:center";><img src="images/panel-logoicon.png"></div>
+                    <div style="text-align:center"><img src="images/panel-logoicon.png"></div>
 
             <!-- This div is for the left panel-->
             <div data-role="panel" data-position-fixed="true" data-display="overlay" data-theme="a" id="nav-panel">
