--- a/view.html
+++ b/view.html
@@ -62,10 +62,7 @@
 
 
                 <form>
-                    <fieldset id="tags" data-role="controlgroup" data-type="horizontal" data-mini="true" style="background-color:#333333; text-shadow: none;" id="tags"> 
-
-
-
+                    <fieldset id="tags" data-role="controlgroup" data-type="horizontal" data-mini="true" style=" background-color:#333333; text-shadow: none;"> 
                     </fieldset>
                 </form>
 
