changes for starbucks nearby default location and remove the preconversations modal

--- a/findYourPeople.html
+++ b/findYourPeople.html
@@ -68,6 +68,7 @@
                     </div>
 
                
+            <input id="address" name="location" id="location" placeholder="Location" value="" type="hidden">
 
             <!-- This div is for the left panel-->
             <div data-role="panel" data-position-fixed="true" data-display="overlay" data-theme="a" id="nav-panel">
