fix for mood page collapsible panel alignment

--- a/mood.html
+++ b/mood.html
@@ -44,7 +44,7 @@
 
 
             <div role="main" class="ui-content jqm-content jqm-fullwidth activitypanel"> 
-                <div data-role="collapsible" data-collapsed="false" data-collapsed-icon="arrow-d ui-nodisc-icon" data-expanded-icon="arrow-u" data-iconpos="right" data-inset="false" data-mini="true" style="background-color:#333333;" class="panel0">
+                <li data-role="collapsible" data-collapsed="false" data-collapsed-icon="arrow-d ui-nodisc-icon" data-expanded-icon="arrow-u" data-iconpos="right" data-inset="false" data-mini="true" style="background-color:#333333;" class="panel0">
                    <h2>COFFEE, DRINKS, FOOD?</h2>
                    <div data-role="controlgroup" data-type="horizontal" style="text-align:center; padding: 0px; margin: 0px; width:100%">
 
@@ -52,8 +52,8 @@
                     <a href="#" class="activitiesImages ui-btn ui-corner-all" selected="0" activity="drinks" style="background:#ffffff;"><img src="images/drinks.svg" class="drinks"></a>
                     <a href="#" class="activitiesImages ui-btn ui-corner-all" selected="0" activity="dine" style="background:#ffffff;"><img src="images/dine.svg" class="dine"></a>
                   
-                </div>
-               </div>
+                    </div>
+               </li>
             </div>
             
              <div role="main" class="ui-content jqm-content jqm-fullwidth" style="padding-top:0px">
