Updating notification counter in the header for all pages

--- a/profile.html
+++ b/profile.html
@@ -12,9 +12,9 @@
         <script src="js/jquery.session.js"></script>
         <script src="js/loggedInOutBehavior.js"></script>
         <script src="js/profile.js"></script>
-        <!--script type="text/javascript">
+        <script type="text/javascript">
         window.onload = loggedInLoggedOutBehavior();
-        </script-->
+        </script>
         <script src="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
 
         <link rel="stylesheet" type="text/css" href="css/mood_1.css">
@@ -31,7 +31,8 @@
 
         <div data-role="page" data-theme="a">
             <div data-role="header" id="header" data-position="fixed"> 
-                <h3>My Profile</h3>
+                <h3     style ="padding-top: 5px; padding-bottom: 16px;">MY PROFILE 
+                    <span id="notificationNo" style="font-size: large; float:right; color:#fff; "/></h3>
 
 
                 <!-- This is the  to initiate side panels-->
