--- a/myPastTables.html
+++ b/myPastTables.html
@@ -30,8 +30,8 @@
         <div data-role="page" data-theme="a">
 
             <div data-role="header" id="header" data-position="fixed"> 
-                <h3>MY PAST TABLES</h3>
-
+                <h3     style ="padding-top: 5px; padding-bottom: 16px;">MY PAST TABLES
+                    <span id="notificationNo" style="font-size: large; float:right; color:#fff; "/></h3>
                 <!-- This is the  to initiate side panels-->
                 <a href="#nav-panel" data-icon="mygear" id="closeleftPanel" class="ios app-theme-none notext" data-iconpos="notext" style="background:#cc0000; margin-left:5px; margin-top:5px;">Menu</a>
                 <a href="#add-form" data-icon="dot" data-iconpos="notext" id="closerightPanel" style="background:#cc0000;  margin-right:5px; margin-top:5px;">Add</a>
