--- a/findYourPeople.html
+++ b/findYourPeople.html
@@ -12,6 +12,7 @@
         <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=geometry,places&sensor=true"></script>
         <script src="js/jquery.session.js"></script>
         <script src="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
+        <script src="http://malsup.github.io/jquery.blockUI.js"></script>
         <script src="js/loggedInOutBehavior.js"></script>
         <script src="js/findYourPeople.js"></script>
 
