--- a/register.html
+++ b/register.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.3/jquery.mobile-1.4.3.min.css">
         <link href="//fonts.googleapis.com/css?family=PT+Sans Narrow:400,700" rel="stylesheet" type="text/css">
         <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>   
-        <script src="js/loggedInOutBehavior.js"></script>
+<!--        <script src="js/loggedInOutBehavior.js"></script>-->
 
         <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=geometry,places&sensor=true"></script>
         <script src="js/jquery.session.js"></script>
