Multiple UI fixes - view screen, mood page and Find your people page

--- a/view.html
+++ b/view.html
@@ -37,7 +37,7 @@
         <div data-role="page" data-theme="a">
 
             <div data-role="header" id="header" data-position="fixed"> 
-              <h3     style ="padding-top: 5px; padding-bottom: 16px;">CONFIRMATION
+              <h3     >CONFIRMATION
                     <span id="notificationNo" style="font-size: large; float:right; color:#fff; "/></h3>
 
 
@@ -98,7 +98,7 @@
                 </div>
        <textarea cols="40" rows="8" name="table_message" id="table_message" placeholder="While we build the chat functionality, please use this space if you wish to inform anything to others like &#34I am running 10 min late&#34 or &#34Sorry, I have an emergency and I will not be able to make it&#34 "></textarea>
        <div style="text-align:center">
-       <a href="#" id = "sendNoteButtonId" class="confirminvitesButton" onclick="sendTableMessage()" style=" color:#ffffff; background-color: #cc0000;">Send Note</a>
+       <a href="#" id = "sendNoteButtonId" class="sendNoteButton" onclick="sendTableMessage()" style=" color:#ffffff; background-color: #cc0000;">SEND NOTE</a>
        </div>
                     
                 <!-- This div is for the left panel-->
